[package]
name = "zum-ai-steam"
version = "0.1.0"
authors = ["RainbowwPhoenixx <rainboww.phoenixx@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
process-memory = "0.4.0"
sysinfo = "0.15.3"
iced = { version = "0.9", features = ["canvas", "tokio"] }
libwmctl = "0.0.45"
udbg = "0.2.1"
mki = "0.2.3"
